# docker-microservices-benchmark

./: .gitignore  README.md  README_2017.md  docker-compose.yml
dotnet/: Dockerfile  Program.cs  WebApplication.csproj
go/: Dockerfile  app.go  go.mod
go_fiber/: Dockerfile  app.go  go.mod
helidon/: Dockerfile  Dockerfile.jlink  Dockerfile.native  pom.xml
helidon/src/main/java/com/github/panga/app/: AppService.java  Main.java  Product.java
helidon/src/main/resources/: application.yaml
node/: Dockerfile  Dockerfile.bun  Dockerfile.express  Dockerfile.fastify  Dockerfile.graalvm  Dockerfile.hyper  Dockerfile.uws  app.js  express.js  fastify.js  hyper.js  index.js  package.json  routes.js  routes_hyper.js  uws.js  worker.js
php_lumen/: Dockerfile  composer.json
php_lumen/bootstrap/: app.php
php_lumen/public/: index.php
php_lumen/routes/: web.php
python/: Dockerfile  app.py  requirements.txt
rust/: Cargo.toml  Dockerfile
rust/src/: main.rs
spring/: Dockerfile  pom.xml
spring/src/main/java/com/github/panga/appspring/: AppSpringApplication.java  Product.java
swift_vapor/: Dockerfile  Package.swift
swift_vapor/Sources/App/: main.swift
swift_vapor/Sources/App/Controllers/: ProductController.swift
swift_vapor/Sources/App/Models/: Product.swift
vertx/: Dockerfile  pom.xml
vertx/src/main/java/: App.java  Product.java
